# lino-env

./: .gitignore  .gitkeep  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  jest.config.js  lino-env.mjs  lino-env.test.mjs  package-lock.json  package.json
.changeset/: bright-foxes-jump.md  chubby-olives-stay.md  direct-release-workflow.md  dotenvx-api.md  instant-release-ab4a8669.md  manual-release-13fd5367.md  manual-release-6509eea6.md  manual-release-d3ea1e93.md  manual-release-dad71361.md  npm-oidc-fix-af972200.md  prepare-for-publish.md  warm-bats-chew.md
.github/workflows/: js.yml  main.yml  manual-release.yml  release.yml  rust.yml
examples/: basic-usage.mjs  dotenvx-style.mjs  duplicates.lenv  example.lenv  test.lenv
experiments/: npm-publishing-investigation.md  test-setOutput.mjs
js/: CHANGELOG.md  README.md  deno.json  package-lock.json  package.json
js/.changeset/: add-rust-restructure.md  drop-duplicate-keys.md  multiline-quoted-values.md
js/examples/: dotenvx-style.mjs  quick.lenv
js/experiments/: npm-publishing-investigation.md
js/scripts/: create-manual-changeset.mjs  format-release-notes.mjs  (+1 more)
rust/: CHANGELOG.md  Cargo.toml  README.md
rust/changelog.d/: 20260107_184452_fix_ci_deprecation_warnings.md  20260328_000000_drop_duplicate_keys.md  20260423_225200_multiline_quoted_values.md  README.md
rust/scripts/: version-and-commit.mjs
rust/src/: lib.rs
scripts/: check-file-size.mjs  detect-code-changes.mjs  format-release-notes.mjs  publish-to-npm.mjs  validate-changeset.mjs
src/: lino-env.mjs
tests/: lino-env.test.mjs
(+8 files in other folders)
