[package]
name = "lino-env"
version = "0.1.0"
edition = "2021"
description = "A Rust library to read and write .lenv files"
readme = "README.md"
license = "Unlicense"
keywords = ["lino", "env", "environment", "links-notation", "config"]
categories = ["config", "parser-implementations"]
repository = "https://github.com/link-foundation/lino-env"
documentation = "https://github.com/link-foundation/lino-env"
rust-version = "1.70"

[lib]
name = "lino_env"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some common patterns
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
